# bc-lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  bclib_8h.html  bclib_8h__incl.map  bclib_8h__incl.md5  bclib_8h_source.html  classes.html  dir_000000_000001.html  dir_000000_000003.html  dir_000001_000002.html  dir_000001_000003.html  dir_000001_000004.html  dir_000002_000003.html  dir_000002_000004.html  dir_000003_000004.html  dir_000005_000000.html  dir_000005_000001.html  dir_000006_000000.html  dir_000006_000001.html  dir_000007_000001.html  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_0966d06610f72609fd9aa4979c2b5a92.js  dir_351eb9b8e4d28d14d03b8c51f28a0778.html  dir_351eb9b8e4d28d14d03b8c51f28a0778.js  dir_351eb9b8e4d28d14d03b8c51f28a0778_dep.map  dir_351eb9b8e4d28d14d03b8c51f28a0778_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_738f5875f24bdde4226274e990e69214.html  dir_738f5875f24bdde4226274e990e69214.js  dir_738f5875f24bdde4226274e990e69214_dep.map  dir_738f5875f24bdde4226274e990e69214_dep.md5  dir_88b8e73f3d440600ef5ced7e33eb10ac.html  (+85 more)
.devcontainer/: Dockerfile  configure.sh  devcontainer.json
.github/workflows/: publish-documentation.yaml  run-tests.yaml
bc-lib/: CMakeLists.txt
bc-lib/include/: bclib.h
bc-lib/include/common/: utils.h
bc-lib/src/ciphers/kuznyechik/: kuznyechik.c
docs/: CMakeLists.txt  Doxyfile.in
include/: bclib.h
include/ciphers/kuznyechik/: kuznyechik.h
include/common/: interface.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
src/ciphers/kuznyechik/: kuznyechik.c
tests/: CMakeLists.txt
tests/cases/: kuznyechik.cpp
tests/coverage/: coverage.cmd.in
tests/include/: tests_common.hpp  tests_utils.hpp
